--- a/front/public/index.html
+++ b/front/public/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.15/dist/tailwind.min.css">
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
-    <title>React App</title>
+    <title>Tigray Back to school</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
